Renaming from treasure hunt / rebuslop to bruse.
