# src/main/java/dev/bruse/api/BruseApiController.java
@@ -1,7 +1,8 @@
-package com.rebuslop.api;
+package dev.bruse.api;
 
-import com.rebuslop.model.*;
-import com.rebuslop.service.RebuslopService;
+import dev.bruse.model.*;
+import dev.bruse.service.BruseService;
+import dev.bruse.model.TaskRequest;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,27 +12,26 @@ import org.springframework.web.bind.annotation.RestController;
 
 import javax.servlet.http.HttpServlet;
 import javax.validation.Valid;
-import java.util.ArrayList;
 
 import static org.springframework.http.ResponseEntity.ok;
 
 
 /**
- * The RebuslopController contains a public method doPost to handle HTTP POST requests from clients.
+ * The BruseApiController contains a public method getTask to handle HTTP POST requests from clients.
  *
  * @see HttpServlet
  */
 @RestController
-public class RebuslopApiController implements RebuslopApi {
-    private final Logger LOGGER = LoggerFactory.getLogger(RebuslopApiController.class);
+public class BruseApiController implements BruseApi {
+    private final Logger LOGGER = LoggerFactory.getLogger(BruseApiController.class);
     private static final long serialVersionUID = 1L;
 
     // Hold a reference to a TreasureHuntObject
-    private final RebuslopService rebuslopService;
+    private final BruseService bruseService;
 
     @Autowired
-    public RebuslopApiController(final RebuslopService rebuslopService) {
-        this.rebuslopService = rebuslopService;
+    public BruseApiController(final BruseService bruseService) {
+        this.bruseService = bruseService;
     }
 
     /**
@@ -45,7 +45,7 @@ public class RebuslopApiController implements RebuslopApi {
                     taskRequestDto.getGamepin(),
                     taskRequestDto.getLat(),
                     taskRequestDto.getLat());
-        final var optionalTask = rebuslopService.getAvailableTask(new TaskRequest(taskRequestDto));
+        final var optionalTask = bruseService.getAvailableTask(new TaskRequest(taskRequestDto));
         return optionalTask.map(task -> ResponseEntity.ok(task.convertToDto()))
                            .orElseGet(() -> ResponseEntity.notFound().build());
     }
