# src/main/resources/public/api.yml
@@ -1,20 +1,18 @@
 openapi: 3.0.0
 info:
-  title: Rebuslop API
+  title: Bruse API
   description: Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.
   version: 0.0.1
 servers:
-  - url: http://api.example.com/v1
-    description: Optional server description, e.g. Main (production) server
-  - url: http://staging-api.example.com
-    description: Optional server description, e.g. Internal staging server for testing
+  - url: https://api.bruse.dev/
+    description: Main (production) server
 paths:
   /taskrequest:
     post:
       summary: Retrieves a task
       operationId: getTask
       tags:
-        - Rebuslop
+        - Bruse
       requestBody:
         content:
           application/json:
